--- a/classes/CN_Account_New_ShipTo_LC_Ctrl_Test.cls
+++ b/classes/CN_Account_New_ShipTo_LC_Ctrl_Test.cls
@@ -66,8 +66,8 @@ private class CN_Account_New_ShipTo_LC_Ctrl_Test {
             acc.CN_Invoicing_Name_Bill_To_Party__c = 'D000';
             acc.CN_Tax_Registration_No__c = '10000000';
             acc.CN_Invoice_Type__c = 'General Invoice';
-            acc.CN_Invoicing_Address_and_Phone__c = 'ABCDEF';
-            acc.CN_Invoicing_Address_and_Phone__c = 'ABCDEF';
+            acc.CN_Invoicing_Address_EN__c = 'ABCDEF';
+            acc.CN_Reference_Day__c = 'Delivery_Day';
             acc.CN_Business_Unit_UI__c = businessUnit.Id;
             acc.CN_Sales_Team_UI__c = salesTeam.Id;
             insert acc;
