--- a/classes/CN_BU_Send_To_SAP_LC_Ctrl_Test.cls
+++ b/classes/CN_BU_Send_To_SAP_LC_Ctrl_Test.cls
@@ -34,7 +34,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
@@ -101,7 +102,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
@@ -173,7 +175,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
@@ -240,7 +243,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
@@ -307,7 +311,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
@@ -374,7 +379,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
@@ -441,7 +447,8 @@ private class CN_BU_Send_To_SAP_LC_Ctrl_Test {
             CN_CFO_UserId__c = lastNameUserIdMap.get('CFO'),
             CN_Finance_AR_UserId__c = lastNameUserIdMap.get('FinanceAR'),
             CN_Finance_MDM_UserId__c = lastNameUserIdMap.get('FinanceMDM'),
-            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM')
+            CN_Sales_MDM_UserId__c = lastNameUserIdMap.get('SalesMDM'),
+			CN_WholeSales_Development_Supervisor__c = lastNameUserIdMap.get('WholeSalesDevelopmentSupervisor')
         );
         insert approveSetting;
 
