--- a/classes/CN_Account_Prevent_Edit_Approved_Handler.cls
+++ b/classes/CN_Account_Prevent_Edit_Approved_Handler.cls
@@ -26,22 +26,33 @@ public without sharing class CN_Account_Prevent_Edit_Approved_Handler implements
         
         for(String fieldName: mfields.keySet()) {
             Schema.DescribeFieldResult fResult = mfields.get(fieldName).getDescribe();
+            if(fResult.isCustom() && fResult.isUpdateable()) {
+                allFields.add(fieldName);
+            }
+            /*
             if(fResult.isCustom() && !fResult.isCalculated() && fResult.isUpdateable()) {
                 allFields.add(fieldName);
             }
+			*/
         }
+        allFields.add('cn_upload_bank_information_fapiao_no__c');
+        allFields.add('cn_upload_business_license_no__c');
+        allFields.add('cn_upload_contract_no__c');
+        allFields.add('cn_upload_hygiene_certificate_no__c');
+        allFields.add('cn_numbers_of_ship_to_party__c');
+        allFields.add('name');
+        allFields.add('ownerid');
+        allFields.add('recordtypeid');
+        allFields.add('description');
+        
         
         for(CN_Account_Prevent_Edit_Field__mdt accFieldsMDT : accFieldsMDTList){
-            //这里不填的话一定是空吗
-            
-            
             if(accFieldsMDT.Allow_Edit_Profile__c==null){
                 allowedEditFields.add(accFieldsMDT.Field_Name__c.toLowerCase()); //如果有profile的不加到任何条件都通过的里面，需要进一步判断profile是否符合
             }else{
                 fieldNameProfileNameMap.put(accFieldsMDT.Field_Name__c.toLowerCase(), accFieldsMDT.Allow_Edit_Profile__c);
             }
         }
-        //有没有要加进去的标准字段
        
 		system.debug('allowedEditFields:	'+ allowedEditFields);
         for(Account acc: (List<Account>)Trigger.new) {
