20221030 Fix git -1 1. Fix: Metadata complant order 2. Fix: Custom metadata Add new Account Field "Visit Frequency" 20220513 3. Fix: permission set of Add Lightning email notification toQA 20221014 4. Fix: profile git error

--- a/classes/CN_PresetPrice_Effect_Batch.cls
+++ b/classes/CN_PresetPrice_Effect_Batch.cls
@@ -68,7 +68,7 @@ global class CN_PresetPrice_Effect_Batch implements Database.Batchable<SObject>,
                     pbe_update.CN_Discount_Price__c = ppbe.CN_Discount_Price__c;
                     pbe_update.UnitPrice = ppbe.CN_UnitPrice__c;
                 }else{
-                    pbe_update.UnitPrice = ppbe.CN_Standard_List_Price__c; //
+                    pbe_update.UnitPrice = ppbe.CN_Standard_List_Price__c;
                 }
                 priceBookEntryList_update.add(pbe_update);
             }else{
